## CERTI Makefile.am
## Copyright (C) 2001 ONERA
## $Id: Makefile.am,v 3.3 2003/10/20 11:16:48 breholee Exp $
##
## Process this file with automake to produce Makefile.in

# @configure_input@

MAINTAINERCLEANFILES = Makefile.in aclocal.m4 configure config.h.in stamp-h.in

SUBDIRS = include libpdebug libCERTI RTIG RTIA libRTI scripts test doc

EXTRA_DIST = myconf gpl.txt lesser.txt VERSION certi-small.xpm

## EOF $Id: Makefile.am,v 3.3 2003/10/20 11:16:48 breholee Exp $
