## Process this file with automake to produce Makefile.in

# @configure_input@

MAINTAINERCLEANFILES = Makefile.in aclocal.m4 configure config.h.in stamp-h.in

SUBDIRS = include libCERTI RTIG RTIA libRTI test doc

scriptsdir = $(prefix)/share/scripts

scripts_DATA = myCERTI_env.sh

EXTRA_DIST = myconf gpl.txt lesser.txt VERSION certi-small.xpm myCERTI_env.sh

