## Process this file with automake to produce Makefile.in

# @configure_input@

MAINTAINERCLEANFILES = Makefile.in aclocal.m4 configure config.h.in stamp-h.in

SUBDIRS = include libCERTI RTIG RTIA libRTI test doc

scriptsdir = $(prefix)/share/scripts

scripts_DATA = myCERTI_env.sh scripts/FindCERTI.cmake

EXTRA_DIST = myconf gpl.txt lesser.txt certi-small.xpm myCERTI_env.sh CMakeLists.txt scripts/FindCERTI.cmake scripts/FindLexYacc.cmake scripts/package_source_dated.cmake scripts/UsePackageBackup.cmake scripts/UseRPMTools.cmake scripts/FindMd5sum.cmake scripts/UseDebian.cmake

